Fixed overlapping font-family, now Lato for docs content

--- a/css/electrode-docs.scss
+++ b/css/electrode-docs.scss
@@ -33,6 +33,10 @@ html {
   background: $pageBg;
 }
 
+body {
+  font-family: "Lato", "Helvetica Rounded", Arial, sans-serif;
+}
+
 .left {
   float: left;
 }
